Introduction of BookshelfUtilities class
Every method used in testing class, about a bookshelf, is now in a single place